--- a/centralDogma/rnaToDna.html
+++ b/centralDogma/rnaToDna.html
@@ -17,17 +17,17 @@
     </div>
     <div class="containerAll">
         <div class="containerTextBox">
-            <label for = "dna">Enter DNA sequence</label><input id= "dna" type="text" onchange="onClick()" /> 
-            <label for = "rna">RNA sequence </label><input type ="text" id="rna" />
+            <label for = "rna">Enter RNA sequence</label><input id= "rna" type="text" onchange="onClick()" /> 
+            <label for = "dna">DNA sequence </label><input type ="text" id="dna" />
         </div>
         <div class="containerButton">
             <button type= "button" onclick= "fillValues()" class="btn btn-info">Convert</button>
         </div>
     </div>
     <div class="rnaToDnaLink">
-        <a class="link" href="../centralDogma/rnaToDna.html">Convert RNA  to DNA sequence</a>
+        <a class="link" href="../centralDogma/index.html">Convert DNA to DNA sequence</a>
     </div>
-    <script src="main.js" defer></script>
+    <script src="rnaToDnaJS.js" defer></script>
     
 
 
