--- a/primer/index.html
+++ b/primer/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
             <a class= "link" href="../primer/index.html">Primer tool</a>
-            <a class= "link" href="../centralDogma/index.html">DNA to RNA</a>
+            <a class= "link" href="../sequenceConversion/">DNA to RNA</a>
             
         
     </div>
