--- a/primer/index.html
+++ b/primer/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="navbar">
             <a class= "link" href="../primer/index.html">Primer tool</a>
-            <a class= "link" href="../sequenceConversion/">DNA to RNA</a>
-            
+            <a class= "link" href="../sequenceConversion/index.html">Convert DNA to RNA</a>
+            <a class= "link" href="../sequenceConversion/toDNA.html">Convert RNA to DNA</a>
         
     </div>
     <div class="containerAll">
